# kernel

./: .gitignore  CLA.md  Cargo.toml  Makefile  README.md  _Osenv.toml  profile.md  project_structure.md
.cargo/: config.toml
etc/: Cargo.in  Makefile  fb.rs  kenv.toml  limine.conf  linker.ld
etc/profiles/: debug.toml  dev-release.toml  dev.toml  release.toml
src/: dev.rs  driverkit.rs  kmsg.rs  macros.rs  main.rs  mem.rs  sync.rs
src/arch/: mod.rs
src/arch/amd64/: acpi.rs  gdt.rs  idt.rs  mod.rs  paging.rs  percpu.rs  syscall.rs  timer.rs  trap.rs
src/arch/amd64/acpi/: handler.rs  lapic.rs
src/dev/: fb.rs
src/ebus/: mod.rs
src/kmi/: front.rs  kmdl.rs  kst.rs  mbs.rs  mod.rs  testbox.rs
src/kmsg/: dev.rs
src/mem/: bsa.rs  bsu.rs  bua.rs  ema.rs  kdm.rs  leak.rs  pfm.rs  pmr.rs  ptm.rs  reg.rs  soa.rs  upa.rs  vma.rs
src/mem/ptm/: entry.rs  exco.rs  mod.rs  polen.rs
src/rt/: entry.rs  gall.rs  mod.rs  panic.rs
src/sched/: balance.rs  eevdf.rs  mod.rs  proc.rs  rq.rs  task.rs  wq.rs
src/sync/: barrier.rs  fueue.rs  litex.rs  mod.rs  mutex.rs  nitex.rs  nutex.rs  rwlock.rs
src/vfs/: err.rs  fs.rs  inode.rs  mb.rs  mod.rs  pvfs.rs  root.rs  rotar.rs
