[package]
name = "kernel"
version = "0.4.3-2.5"
edition = "2024"

[dependencies]
bitflags = "2"
extrum = { version = "0.1.3", features = ["no_std"] }
heapless = "0"
lazy_static = { version = "1", features = ["spin_no_std"] }
limine = "0"
x86 = "0"
x86_64 = "0"
acpi = { version = "6", features = ["alloc"] }
elf = { version = "0", default-features = false }
ketypes = { git = "https://github.com/Urriverse/ketypes.git", branch = "main" }
apaque = { git = "https://github.com/vi-is-ramen/apaque.git", branch = "main", default-features = false }
macros = { git = "https://github.com/vi-is-ramen/macros.git", branch = "main" }
linkme = "0.3.36"

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = false  # LTO makes kernel slower!
panic = 'abort'

[features]
lowlog = []
devlog = []
